--- a/index.html
+++ b/index.html
@@ -36,4 +36,4 @@
     <li class="my-class-3">Unset the <a href="#">link</a> color</li>
   </ul>
 </body>
-</html>
+<!-- docs https://developer.mozilla.org/ko/docs/Learn/CSS/Building_blocks/Cascade_and_inheritance -->
