--- a/종속 계층/종속개념.html
+++ b/종속 계층/종속개념.html
@@ -9,5 +9,12 @@
   <body>
     <p><a href="https://example.org">User agent styles</a></p>
     <p><a href="https://example.org" class="author">Author styles</a></p>
+    <p class="alert">Beware of the zombies</p>
+    <div class="item">
+      I am displayed in <code>color: rebeccapurple</code> because the
+      <code>special</code> layer comes after the <code>base</code> layer. My green
+      border, font-size, and padding come from the <code>base</code> layer.
+    </div>
+    
   </body>
 </html>
